Chỉnh sửa thông tin và hiển thị giao diện phương tiện

--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ avatar: "/img/Picture-HSL/logo-trans.png"
 author:
   name: "\U0001F525Hùng Vĩ Tourist\U0001F525"
   rss: true
-  email: hungvitourist@outlook.com
+  email: hungvitourist@gmail.com
   facebook: hungvitourist
   instagram: nguyen.duy.bang
   youtube: '@HùngVĩTourist'
-  telephone: 0784140494
+  telephone: 0396510099
   tiktok: '@denthongminhhappy'
 company: "CÔNG TY TNHH DỊCH VỤ DU LỊCH HÙNG VĨ"
 company_SHORT_NAME: "✨HÙNG VĨ TOURIST✨"
