Cập nhật google_analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ✈️Hùng Vĩ Tourist
+title: Hùng Vĩ Tourist
 description: >-
   Hùng Vĩ Tourist – đồng hành cùng bạn trên mọi hành trình. 
   Dịch vụ làm VISA nhanh chóng, đặt vé máy bay giá tốt, tour du lịch đa dạng, uy tín và chuyên nghiệp.
@@ -63,7 +63,7 @@ share-links-active:
   facebook: true
   linkedin: true
 #disqus: bang-nguyen-blog
-#google_analytics: G-NX3V2C477N
+google_analytics: G-97CTZX8FED
 #gtm: GTM-PSCP4JVR
 #fb_app_id: '721347795190980'
 excerpt_length: 50
