Cập nhật địa chỉ GG_MAP

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ company_SHORT_NAME: "✨HÙNG VĨ TOURIST✨"
 Tax-code: "MST: 0315546297"
 address-1: "📌: Ấp Bùng Binh, Xã Hưng Thuận, Tỉnh Tây Ninh"
 address-2: "📌: -----"
-map-address-1: https://maps.app.goo.gl/rMTH9mqSYXBorpZY9
+map-address-1: https://maps.app.goo.gl/
 map-address-2: ------
 footer-links-active:
   rss: false
