--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ author:
 company: "CÔNG TY TNHH DỊCH VỤ DU LỊCH HÙNG VĨ"
 company_SHORT_NAME: "✨HÙNG VĨ TOURIST✨"
 Tax-code: "MST: 0315546297"
-address-1: "📌: Ấp Bùng Binh, Xã Hưng Thuận, Tỉnh Tây Ninh"
-address-2: "📌: -----"
+address-1: "Ấp Bùng Binh, Xã Hưng Thuận, Tỉnh Tây Ninh"
+address-2: "-----"
 map-address-1: https://maps.app.goo.gl/
 map-address-2: ------
 footer-links-active:
