Cập nhật lại một số thông tin footer

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   tiktok: '@hungvitourist'
 company: "CÔNG TY TNHH DỊCH VỤ DU LỊCH HÙNG VĨ"
 company_SHORT_NAME: "✨HÙNG VĨ TOURIST✨"
-Tax-code: "MST: 0315546297"
+Tax-code: "0315546297"
 address-1: "Ấp Bùng Binh, Xã Hưng Thuận, Tỉnh Tây Ninh"
 address-2: "-----"
 map-address-1: https://maps.app.goo.gl/
